--- a/tienchin-admin/pom.xml
+++ b/tienchin-admin/pom.xml
@@ -66,7 +66,11 @@
             <groupId>com.guo</groupId>
             <artifactId>tienchin-channel</artifactId>
         </dependency>
-
+        <!-- 活动管理-->
+        <dependency>
+            <groupId>com.guo</groupId>
+            <artifactId>tienchin-activity</artifactId>
+        </dependency>
         <!-- 单元测试 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
