--- a/tienchin-admin/src/main/resources/ValidationMessages.properties
+++ b/tienchin-admin/src/main/resources/ValidationMessages.properties
@@ -1,5 +1,17 @@
-channel.name.notnull = \u6E20\u9053\u540D\u4E0D\u80FD\u4E3A\u7A7A
-channel.type.notnull = \u6E20\u9053\u7C7B\u578B\u4E0D\u80FD\u4E3A\u7A7A
-channel.status.notnull = \u6E20\u9053\u72B6\u6001\u4E0D\u80FD\u4E3A\u7A7A
-channel.type.invalid = \u6E20\u9053\u7C7B\u578B\u65E0\u6548
-channel.status.invalid = \u6E20\u9053\u72B6\u6001\u65E0\u6548
+channel.name.notnull=\u6E20\u9053\u540D\u4E0D\u80FD\u4E3A\u7A7A
+channel.type.notnull=\u6E20\u9053\u7C7B\u578B\u4E0D\u80FD\u4E3A\u7A7A
+channel.status.notnull=\u6E20\u9053\u72B6\u6001\u4E0D\u80FD\u4E3A\u7A7A
+channel.type.invalid=\u6E20\u9053\u7C7B\u578B\u65E0\u6548
+channel.status.invalid=\u6E20\u9053\u72B6\u6001\u65E0\u6548
+activity.name.notblank=\u6D3B\u52A8\u540D\u79F0\u4E0D\u80FD\u4E3A\u7A7A
+activity.name.size=\u6D3B\u52A8\u6700\u5927\u540D\u79F0\u4E3A20\u4E2A\u5B57\u7B26
+activity.channelId.notnull=\u6E20\u9053ID\u4E0D\u80FD\u4E3A\u7A7A
+activity.info.notnull=\u6E20\u9053\u7B80\u4ECB\u4E0D\u80FD\u4E3A\u7A7A
+activity.info.size=\u6D3B\u52A8\u7B80\u4ECB\u6700\u591A\u4E3A255\u4E2A\u5B57\u7B26
+activity.type.notnull=\u6D3B\u52A8\u7C7B\u578B\u4E0D\u80FD\u4E3A\u7A7A
+activity.discount.invalid=\u6298\u6263\u5238\u503C\u65E0\u6548
+activity.voucher.invalid=\u4EE3\u91D1\u5238\u503C\u65E0\u6548
+activity.status.invalid=\u6D3B\u52A8\u72B6\u6001\u65E0\u6548
+activity.beginTime.notnull=\u6D3B\u52A8\u5F00\u59CB\u65F6\u95F4\u4E0D\u80FD\u4E3A\u7A7A
+activity.endTime.notnull=\u6D3B\u52A8\u7ED3\u675F\u65F6\u95F4\u4E0D\u80FD\u4E3A\u7A7A
+activity.id.notnull=\u6D3B\u52A8ID\u4E0D\u80FD\u4E3A\u7A7A
