--- a/tienchin-admin/src/main/resources/ValidationMessages.properties
+++ b/tienchin-admin/src/main/resources/ValidationMessages.properties
@@ -15,3 +15,10 @@ activity.status.invalid=\u6D3B\u52A8\u72B6\u6001\u65E0\u6548
 activity.beginTime.notnull=\u6D3B\u52A8\u5F00\u59CB\u65F6\u95F4\u4E0D\u80FD\u4E3A\u7A7A
 activity.endTime.notnull=\u6D3B\u52A8\u7ED3\u675F\u65F6\u95F4\u4E0D\u80FD\u4E3A\u7A7A
 activity.id.notnull=\u6D3B\u52A8ID\u4E0D\u80FD\u4E3A\u7A7A
+course.type.notnull=\u8BFE\u7A0B\u7C7B\u578B\u4E0D\u80FD\u4E3A\u7A7A
+course.name.notblank=\u8BFE\u7A0B\u540D\u79F0\u4E0D\u80FD\u4E3A\u7A7A
+course.price.notnull=\u8BFE\u7A0B\u4EF7\u683C\u4E0D\u80FD\u4E3A\u7A7A
+course.price.invalid=\u8BFE\u7A0B\u4EF7\u683C\u65E0\u6548
+course.applyTo.notnull=\u8BFE\u7A0B\u9002\u7528\u4EBA\u7FA4\u4E0D\u80FD\u4E3A\u7A7A
+course.info.notblank=\u8BFE\u7A0B\u4FE1\u606F\u4E0D\u80FD\u4E3A\u7A7A
+course.id.notnull=\u8BFE\u7A0BID\u4E0D\u80FD\u4E3A\u7A7A
