--- a/tienchin-admin/src/main/resources/ValidationMessages.properties
+++ b/tienchin-admin/src/main/resources/ValidationMessages.properties
@@ -22,3 +22,5 @@ course.price.invalid=\u8BFE\u7A0B\u4EF7\u683C\u65E0\u6548
 course.applyTo.notnull=\u8BFE\u7A0B\u9002\u7528\u4EBA\u7FA4\u4E0D\u80FD\u4E3A\u7A7A
 course.info.notblank=\u8BFE\u7A0B\u4FE1\u606F\u4E0D\u80FD\u4E3A\u7A7A
 course.id.notnull=\u8BFE\u7A0BID\u4E0D\u80FD\u4E3A\u7A7A
+clue.name.notblank=\u5BA2\u6237\u59D3\u540D\u4E0D\u80FD\u4E3A\u7A7A
+clue.phone.notblank=\u5BA2\u6237\u7535\u8BDD\u4E0D\u80FD\u4E3A\u7A7A
