--- a/tienchin-admin/src/main/resources/ValidationMessages.properties
+++ b/tienchin-admin/src/main/resources/ValidationMessages.properties
@@ -1,26 +1,30 @@
-channel.name.notnull=\u6E20\u9053\u540D\u4E0D\u80FD\u4E3A\u7A7A
-channel.type.notnull=\u6E20\u9053\u7C7B\u578B\u4E0D\u80FD\u4E3A\u7A7A
-channel.status.notnull=\u6E20\u9053\u72B6\u6001\u4E0D\u80FD\u4E3A\u7A7A
+channel.name.notNull=\u6E20\u9053\u540D\u4E0D\u80FD\u4E3A\u7A7A
+channel.type.notNull=\u6E20\u9053\u7C7B\u578B\u4E0D\u80FD\u4E3A\u7A7A
+channel.status.notNull=\u6E20\u9053\u72B6\u6001\u4E0D\u80FD\u4E3A\u7A7A
 channel.type.invalid=\u6E20\u9053\u7C7B\u578B\u65E0\u6548
 channel.status.invalid=\u6E20\u9053\u72B6\u6001\u65E0\u6548
-activity.name.notblank=\u6D3B\u52A8\u540D\u79F0\u4E0D\u80FD\u4E3A\u7A7A
+activity.name.notBlank=\u6D3B\u52A8\u540D\u79F0\u4E0D\u80FD\u4E3A\u7A7A
 activity.name.size=\u6D3B\u52A8\u6700\u5927\u540D\u79F0\u4E3A20\u4E2A\u5B57\u7B26
-activity.channelId.notnull=\u6E20\u9053ID\u4E0D\u80FD\u4E3A\u7A7A
-activity.info.notnull=\u6E20\u9053\u7B80\u4ECB\u4E0D\u80FD\u4E3A\u7A7A
+activity.channelId.notNull=\u6E20\u9053ID\u4E0D\u80FD\u4E3A\u7A7A
+activity.info.notNull=\u6E20\u9053\u7B80\u4ECB\u4E0D\u80FD\u4E3A\u7A7A
 activity.info.size=\u6D3B\u52A8\u7B80\u4ECB\u6700\u591A\u4E3A255\u4E2A\u5B57\u7B26
-activity.type.notnull=\u6D3B\u52A8\u7C7B\u578B\u4E0D\u80FD\u4E3A\u7A7A
+activity.type.notNull=\u6D3B\u52A8\u7C7B\u578B\u4E0D\u80FD\u4E3A\u7A7A
 activity.discount.invalid=\u6298\u6263\u5238\u503C\u65E0\u6548
 activity.voucher.invalid=\u4EE3\u91D1\u5238\u503C\u65E0\u6548
 activity.status.invalid=\u6D3B\u52A8\u72B6\u6001\u65E0\u6548
-activity.beginTime.notnull=\u6D3B\u52A8\u5F00\u59CB\u65F6\u95F4\u4E0D\u80FD\u4E3A\u7A7A
-activity.endTime.notnull=\u6D3B\u52A8\u7ED3\u675F\u65F6\u95F4\u4E0D\u80FD\u4E3A\u7A7A
-activity.id.notnull=\u6D3B\u52A8ID\u4E0D\u80FD\u4E3A\u7A7A
-course.type.notnull=\u8BFE\u7A0B\u7C7B\u578B\u4E0D\u80FD\u4E3A\u7A7A
-course.name.notblank=\u8BFE\u7A0B\u540D\u79F0\u4E0D\u80FD\u4E3A\u7A7A
-course.price.notnull=\u8BFE\u7A0B\u4EF7\u683C\u4E0D\u80FD\u4E3A\u7A7A
+activity.beginTime.notNull=\u6D3B\u52A8\u5F00\u59CB\u65F6\u95F4\u4E0D\u80FD\u4E3A\u7A7A
+activity.endTime.notNull=\u6D3B\u52A8\u7ED3\u675F\u65F6\u95F4\u4E0D\u80FD\u4E3A\u7A7A
+activity.id.notNull=\u6D3B\u52A8ID\u4E0D\u80FD\u4E3A\u7A7A
+course.type.notNull=\u8BFE\u7A0B\u7C7B\u578B\u4E0D\u80FD\u4E3A\u7A7A
+course.name.notBlank=\u8BFE\u7A0B\u540D\u79F0\u4E0D\u80FD\u4E3A\u7A7A
+course.price.notNull=\u8BFE\u7A0B\u4EF7\u683C\u4E0D\u80FD\u4E3A\u7A7A
 course.price.invalid=\u8BFE\u7A0B\u4EF7\u683C\u65E0\u6548
-course.applyTo.notnull=\u8BFE\u7A0B\u9002\u7528\u4EBA\u7FA4\u4E0D\u80FD\u4E3A\u7A7A
-course.info.notblank=\u8BFE\u7A0B\u4FE1\u606F\u4E0D\u80FD\u4E3A\u7A7A
-course.id.notnull=\u8BFE\u7A0BID\u4E0D\u80FD\u4E3A\u7A7A
-clue.name.notblank=\u5BA2\u6237\u59D3\u540D\u4E0D\u80FD\u4E3A\u7A7A
-clue.phone.notblank=\u5BA2\u6237\u7535\u8BDD\u4E0D\u80FD\u4E3A\u7A7A
+course.applyTo.notNull=\u8BFE\u7A0B\u9002\u7528\u4EBA\u7FA4\u4E0D\u80FD\u4E3A\u7A7A
+course.info.notBlank=\u8BFE\u7A0B\u4FE1\u606F\u4E0D\u80FD\u4E3A\u7A7A
+course.id.notNull=\u8BFE\u7A0BID\u4E0D\u80FD\u4E3A\u7A7A
+clue.name.notBlank=\u5BA2\u6237\u59D3\u540D\u4E0D\u80FD\u4E3A\u7A7A
+clue.phone.notBlank=\u5BA2\u6237\u7535\u8BDD\u4E0D\u80FD\u4E3A\u7A7A
+assignment.assignId.notNull=\u7EBF\u7D22ID\u4E0D\u80FD\u4E3A\u7A7A
+assignment.userId.notNull=\u7528\u6237ID\u4E0D\u80FD\u4E3A\u7A7A
+assignment.deptId.notNull=\u90E8\u95E8ID\u4E0D\u80FD\u4E3A\u7A7A
+assignment.userName.notBlank=\u7528\u6237\u540D\u4E0D\u80FD\u4E3A\u7A7A
